# Matrix-Library-in-C--

./: CMakeLists.txt  README.md
include/: matrix.h
source/: matrix.cc
test/: CMakeLists.txt  tests.cc
